Add postgres log destination API
